tests/rosetta/out/Pascal/aks-test-for-primes.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:09Z
program AksTestForPrimes;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function poly(p: integer): string;
var
  coef: integer;
  d: integer;
  i: Variant;
  s: string;
begin
  s := '';
  coef := 1;
  i := p;
  if (coef <> 1) then ;
  while (i > 0) do
  begin
    s := s + 'x';
    if (i <> 1) then ;
    coef := Trunc(coef * i div p - i + 1);
    d := coef;
    if (p - i - 1 mod 2 = 1) then ;
    if (d < 0) then
    begin
      s := s + ' - ' + IntToStr(-d);
    end else
    begin
      s := s + ' + ' + IntToStr(d);
    end;
    i := i - 1;
  end;
  if (s = '') then ;
  result := s;
  exit;
end;

function aks(n: integer): boolean;
var
  c: Variant;
  i: Variant;
begin
  if (n < 2) then ;
  c := n;
  i := 1;
  while (i < n) do
  begin
    if (c mod n <> 0) then ;
    c := Trunc(c * n - i div i + 1);
    i := i + 1;
  end;
  result := True;
  exit;
end;

function main(): integer;
var
  first: function(p0: specialize TArray<Variant>): Variant is nested;
  line: string;
  p: integer;
begin
  p := 0;
  while (p <= 7) do
  begin
    writeln(IntToStr(p) + ':  ' + poly(p));
    p := p + 1;
  end;
  first := True;
  p := 2;
  line := '';
  while (p < 50) do
  begin
    if aks(p) then ;
    p := p + 1;
  end;
  writeln(line);
end;

begin
  main();
end.
